--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   overflow: hidden;
 }
+
 .container {
   cursor: pointer;
   display: flex;
@@ -12,6 +13,7 @@ body {
   height: 100vh;
   width: 100vw;
 }
+
 .ball {
   width: 2rem;
   height: 2rem;
@@ -19,20 +21,5 @@ body {
   border-radius: 50%;
   position: absolute;
   top: 10rem;
-}
-
-.button {
-  padding: 0.5rem 1rem;
-  background-color: white;
-  color: black;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  position: absolute;
-  z-index: 10000;
-  top: 0;
-}
-
-.button:hover {
-  background-color: lightgray;
+  transition: width 0.2s ease;
 }
